Update: Completed the Contact Me page. Also, fixed an issue where my content would overlap my footer (added a divider-to-footer id before the end of div container)

--- a/style/styles.css
+++ b/style/styles.css
@@ -7,8 +7,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html {
-  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 html,
@@ -28,26 +29,40 @@ body {
 .page-background {
   background-image: url("../images/background-image-repeat.jpg");
   /* background-repeat: repeat; */
-  /* background-size: 30%; */
+  background-size: 50%;
 }
 
 .box-container-transparent-round {
   background-color: rgba(9, 161, 41, 0.65);
   padding: 30px;
-  margin: 50px;
+  margin: 20px;
   border: 1px solid var(--Aqua-Green);
   border-radius: 1cm;
+}
+
+.box-container-transparent-normal {
+  background-color: rgba(9, 161, 41, 0.65);
+  padding: 30px;
+  margin: 20px;
+  border: 1px solid var(--Aqua-Green);
+  border-radius: 0.5cm;
 }
 
 .box-container-transparent-sharp {
   background-color: rgba(9, 161, 41, 0.65);
   padding: 30px;
-  margin: 50px;
+  margin: 20px;
   border: 1px solid var(--Aqua-Green);
-  border-radius: 0.15cm;
+  border-radius: 0.25cm;
 }
 
 /* For navigation */
+
+#divider-to-nav {
+  /* overflow: auto; */
+  height: 150px;
+  /* background-color: red; for seeing how much spacing we have */
+}
 
 .nav-container {
   position: absolute;
@@ -66,6 +81,7 @@ body {
 
 .nav-list-item {
   display: inline-block;
+  margin: 10px;
   width: 200px;
 }
 
@@ -79,10 +95,13 @@ body {
   text-align: center;
   font-size: 25px;
   border-radius: 1cm;
+  transition: 0.5s;
 }
 
 .nav-link:hover {
   background-color: var(--Gunmetal);
+
+  transition: 0.5s;
 }
 
 /* Mobile view */
@@ -93,12 +112,6 @@ body {
 
 #container {
   min-height: 100%;
-}
-
-#divider-to-contents {
-  overflow: auto;
-  padding-bottom: 150px;
-  /* background-color: red; for seeing how much spacing we have */
 }
 
 #footer {
@@ -113,6 +126,12 @@ body {
   text-align: center;
   background-color: var(--Gunmetal);
   color: white;
+}
+
+#divider-to-footer {
+  /* overflow: auto; */
+  height: 120px;
+  /* background-color: red; for seeing how much spacing we have*/
 }
 
 /* Mobile view */
@@ -161,9 +180,7 @@ body {
 
 .form {
   min-width: 700px;
-
-  min-height: 400px;
-
+  max-width: 700px;
   margin: auto;
 }
 
@@ -173,13 +190,14 @@ body {
   justify-content: center;
   text-align: center;
   padding-bottom: 30px;
-  font-size: 47px;
+  font-size: 45px;
 }
 
 .input-container {
   display: flex;
   justify-content: space-between;
   padding-bottom: 30px;
+  font-size: 15px;
 }
 
 .input-spacing {
@@ -187,21 +205,31 @@ body {
   width: 250px;
 }
 
+.input-style {
+  border: 1px solid var(--Office-Green);
+  border-radius: 0.15cm;
+  background-color: var(--Spring-Green);
+  font-size: 15px;
+}
+
 .textarea-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+
+  font-size: 15px;
 }
 
 .textarea {
   padding: 10px;
+  resize: vertical;
+  border: 1px solid var(--Office-Green);
+  background-color: var(--Spring-Green);
 }
 
 .form-button-container {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin: 10px 0;
+  margin-top: 10px;
 }
 .form-button {
   border: 5px solid var(--Office-Green);
@@ -209,9 +237,11 @@ body {
   background-color: var(--Spring-Green);
   width: 125px;
   height: 40px;
+  transition: 0.25s;
 }
 .form-button:hover {
   border: 5px solid var(--Gunmetal);
   background-color: var(--Office-Green);
   color: white;
+  transition: 0.25s;
 }
